--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase": "^11.3.0",
+    "firebase-admin": "^13.1.0",
     "node-cron": "^3.0.3",
     "openai": "^4.83.0"
   }
