--- a/app/package.json
+++ b/app/package.json
@@ -18,12 +18,15 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/pt-serif": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@google-cloud/text-to-speech": "^5.8.0",
     "@gorhom/bottom-sheet": "^5.1.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.32",
+    "expo-av": "~15.0.2",
     "expo-constants": "~17.0.5",
+    "expo-file-system": "~18.0.10",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.5",
