--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
-        <data android:scheme="com.jolvn.xpressnews"/>
+        <data android:scheme="fr.jolan.xpress"/>
         <data android:scheme="exp+xpress-news"/>
       </intent-filter>
     </activity>
