--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "expo": "~52.0.32",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.12",
     "expo-file-system": "~18.0.10",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
@@ -48,8 +49,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-dev-client": "~5.0.12"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
