--- a/app/android/settings.gradle
+++ b/app/android/settings.gradle
@@ -21,7 +21,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
   }
 }
 
-rootProject.name = 'xpress-news'
+rootProject.name = 'Xpress'
 
 dependencyResolutionManagement {
   versionCatalogs {
