--- a/app/app.json
+++ b/app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "xpress-news",
+    "name": "Xpress",
     "slug": "xpress-news",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -29,12 +29,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-screen-light.png",
-          "backgroundColor": "#000000",
-          "resizeMode": "cover",
+          "image": "./assets/images/splash-screen.png",
+          "resizeMode": "contain",
+          "backgroundColor": "#F1F2FF",
           "dark": {
-            "image": "./assets/images/splash-screen-dark.png",
-            "backgroundColor": "#000000"
+            "image": "./assets/images/splash-screen.png",
+            "backgroundColor": "#010121"
           }
         }
       ],
