--- a/app/app.json
+++ b/app/app.json
@@ -38,7 +38,8 @@
           }
         }
       ],
-      "expo-font"
+      "expo-font",
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
