Show subscription modal when user not subscribed and clicking on bookmark button

--- a/app/app.json
+++ b/app/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Xpress",
     "slug": "xpress-news",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -38,8 +38,7 @@
           }
         }
       ],
-      "expo-font",
-      "expo-localization"
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
